# services/auth/handler.go
@@ -7,6 +7,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type MessageResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
 type RegisterRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Username string `json:"username" binding:"required,min=2,max=100"`
@@ -18,30 +26,34 @@ type RegisterRequest struct {
 // @Tags         Register
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  map[string]string
+// @Success      200  {object}  MessageResponse
+// @Failure      400  {object}  ErrorResponse
 // @Router       /register [post]
 // @Param        request body RegisterRequest true "Register request body"
 func RegisterHandler(c *gin.Context) {
 	var req RegisterRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		c.JSON(http.StatusBadRequest, ErrorResponse{Error: "Invalid input"})
 		return
 	}
 	// Get client IP address
 	ip := c.ClientIP()
 
 	if err := RegisterUser(req.Email, req.Username, req.Password, ip); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, ErrorResponse{Error: err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Registration successful"})
+	c.JSON(http.StatusOK, MessageResponse{Message: "Registration successful"})
 }
 
 type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=6"`
+}
+type LoginResponse struct {
+	Token string `json:"token"`
 }
 
 // @Summary      Login
@@ -49,19 +61,21 @@ type LoginRequest struct {
 // @Tags         Login
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  map[string]string
+// @Success      200  {object}  LoginResponse
+// @Failure      400  {object}  ErrorResponse
+// @Failure      401  {object}  ErrorResponse
 // @Router       /login [post]
 // @Param        request body LoginRequest true "Login request body"
 func LoginHandler(c *gin.Context) {
 	var req LoginRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{"error": "Invalid input"})
+		c.JSON(http.StatusBadRequest, ErrorResponse{Error: "Invalid input"})
 		return
 	}
 
 	token, err := LoginUser(req.Email, req.Password)
 	if err != nil {
-		c.JSON(401, gin.H{"error": err.Error()})
+		c.JSON(http.StatusUnauthorized, ErrorResponse{Error: err.Error()})
 		return
 	}
 	// Set JWT in HttpOnly Cookie
@@ -81,29 +95,31 @@ type ChangePasswordRequest struct {
 // @Tags         ChangePassword
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  map[string]string
+// @Success      200  {object}  MessageResponse
+// @Failure      400  {object}  ErrorResponse
+// @Failure      401  {object}  ErrorResponse
 // @Router       /change-password [post]
 // @Param        request body ChangePasswordRequest true "Change Password request body"
 func ChangePasswordHandler(c *gin.Context) {
 	var req ChangePasswordRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		c.JSON(http.StatusBadRequest, ErrorResponse{Error: "Invalid input"})
 		return
 	}
 
 	userID := c.GetString("user_id")
 	if userID == "" {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+		c.JSON(http.StatusUnauthorized, ErrorResponse{Error: "Unauthorized"})
 		return
 	}
 
 	err := ChangePassword(userID, req.OldPassword, req.NewPassword)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, ErrorResponse{Error: err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Password changed successfully"})
+	c.JSON(http.StatusOK, MessageResponse{Message: "Password changed successfully"})
 }
 
 // @Summary      Logout
@@ -111,11 +127,11 @@ func ChangePasswordHandler(c *gin.Context) {
 // @Tags         Logout
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  map[string]string
+// @Success      200  {object}  MessageResponse
 // @Router       /logout [post]
 func LogoutHandler(c *gin.Context) {
 	// c.SetCookie("token", "", -1, "/", "localhost", true, true)
 	// without frontend cookie
 	c.SetCookie("token", "", -1, "/", "", false, true)
-	c.JSON(200, gin.H{"message": "Logged out successfully"})
+	c.JSON(http.StatusOK, MessageResponse{Message: "Logged out successfully"})
 }
